--- a/.github/workflows/master_healthmed-api.yml
+++ b/.github/workflows/master_healthmed-api.yml
@@ -24,7 +24,7 @@ jobs:
           dotnet-version: '8.x'
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build HealthMed_Hackaton.sln --configuration Release
 
       - name: dotnet publish
         run: dotnet publish ./HealthMed.Presentation/HealthMed.Presentation.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
