--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  Build - API:
     runs-on: ubuntu-latest
     permissions:
       contents: read #This is required for actions/checkout
@@ -23,16 +23,42 @@ jobs:
       - name: Build with dotnet
         run: dotnet build HealthMed_Hackaton.sln --configuration Release
 
-      - name: dotnet publish
+      - name: dotnet publish HealthMed-API
         run: dotnet publish ./HealthMed.Presentation/HealthMed.Presentation.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          path: ${{env.DOTNET_ROOT}}/api
+          
+  Build - Agendamentos:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read #This is required for actions/checkout
 
-  deploy:
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up .NET Core
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8.x'
+
+      - name: Build with dotnet
+        run: dotnet build HealthMed_Hackaton.sln --configuration Release
+
+      - name: dotnet publish HealthMed-Agendamentos
+        run: dotnet publish ./WebJobs/Agendamentos/Agendamentos.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
+
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v4
+        with:
+          name: .net-app
+          path: ${{env.DOTNET_ROOT}}/agendamentos
+          
+
+  Deploy - API:
     runs-on: ubuntu-latest
     needs: build
     environment:
@@ -62,4 +88,34 @@ jobs:
           app-name: 'HealthMed-API'
           slot-name: 'Production'
           package: .
-          
+    
+  Deploy - Agendamentos:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    permissions:
+      id-token: write #This is required for requesting the JWT
+      contents: read #This is required for actions/checkout
+
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v4
+        with:
+          name: .net-app
+      
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_02EC686F1FCF4668BECE537ADD77F482 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_601F17F73E6344B9A6E04076D81441C0 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_1B04FE6D69A64C9CA5F776F6C1D5129F }}
+
+      - name: Deploy to Azure Web App
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: 'HealthMed-Agendamentos'
+          slot-name: 'Production'
+          package: .
