--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -56,7 +56,32 @@ jobs:
         with:
           name: HealthMed-Agendamentos
           path: ${{env.DOTNET_ROOT}}/agendamentos
-          
+
+  Build-Notificacoes:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read #This is required for actions/checkout
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up .NET Core
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8.x'
+
+      - name: Build with dotnet
+        run: dotnet build HealthMed_Hackaton.sln --configuration Release
+
+      - name: dotnet publish HealthMed-Notificacoes
+        run: dotnet publish ./WebJobs/HealthMed.Notificacoes/HealthMed.Notificacoes.csproj -c Release -o ${{env.DOTNET_ROOT}}/notificacoes
+
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v4
+        with:
+          name: HealthMed-notificacoes
+          path: ${{env.DOTNET_ROOT}}/notificacoes
+
 
   Deploy-API:
     runs-on: ubuntu-latest
@@ -117,5 +142,36 @@ jobs:
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'HealthMed-Agendamentos'
+          slot-name: 'Production'
+          package: .
+
+  Deploy-Notificacoes:
+    runs-on: ubuntu-latest
+    needs: Build-Notificacoes
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    permissions:
+      id-token: write #This is required for requesting the JWT
+      contents: read #This is required for actions/checkout
+
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v4
+        with:
+          name: .net-app
+      
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_936CAA2608A84C81BE24DC2AF258B696 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_DBABA27DD9BC4792AC4BD59E090D511D }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_FB9DB07589D4408DA6974FE7FCB25696 }}
+
+      - name: Deploy to Azure Web App
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: 'HealthMed-Notificacoes'
           slot-name: 'Production'
           package: .
