Fix: CD HealthMed-Notificacoes

--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -159,7 +159,7 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: .net-app
+          name: HealthMed-Notificacoes
       
       - name: Login to Azure
         uses: azure/login@v2
