fix: Build-Notificacoes

--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -79,7 +79,7 @@ jobs:
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: HealthMed-notificacoes
+          name: HealthMed-Notificacoes
           path: ${{env.DOTNET_ROOT}}/notificacoes
 
 
