--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: HealthMedApi
+          name: HealthMed-Api
           path: ${{env.DOTNET_ROOT}}/api
           
   Build-Agendamentos:
@@ -97,7 +97,7 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: HealthMedApi
+          name: HealthMed-Api
       
       - name: Login to Azure
         uses: azure/login@v2
