--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -19,7 +19,8 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.x'
-
+          include-prerelease: true
+          
       - name: Build with dotnet
         run: dotnet build HealthMed_Hackaton.sln --configuration Release
 
@@ -85,13 +86,10 @@ jobs:
 
   Deploy-API:
     runs-on: ubuntu-latest
-    needs: Build-Api
+    needs: build
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
 
     steps:
       - name: Download artifact from build job
@@ -99,19 +97,13 @@ jobs:
         with:
           name: HealthMed-Api
       
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_CCCD89B451B743B481D693E14367A27D }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_806D1E414584458F890E5A5CBDDBD8C3 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_FD33295752584B23A1BD3AAF6BF0ED46 }}
-
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'HealthMedApi'
+          app-name: 'HealthMed-API'
           slot-name: 'Production'
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_611DC8D7D0AE49EA96CE461AE29FDBB5 }}
           package: .
     
   Deploy-Agendamentos:
