--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -86,7 +86,7 @@ jobs:
 
   Deploy-API:
     runs-on: ubuntu-latest
-    needs: build
+    needs: Build-API
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
